--- a/src/less/uw-ui-toolkit/uw-variables.less
+++ b/src/less/uw-ui-toolkit/uw-variables.less
@@ -355,15 +355,15 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #fff; //uw
-@navbar-default-bg:                @uw-tan-light; //uw
+@navbar-default-color:             @uw-gray-dark; //uw
+@navbar-default-bg:                #fff; //uw
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #fff; //uw
-@navbar-default-link-hover-color:          #fff; //uw
-@navbar-default-link-hover-bg:             darken(@navbar-inverse-bg, 10%); //uw
-@navbar-default-link-active-color:         #fff; //uw
+@navbar-default-link-color:                @uw-gray-dark; //uw
+@navbar-default-link-hover-color:          @uw-gray-dark;  //uw
+@navbar-default-link-hover-bg:             darken(@navbar-default-bg, 6.5%); //uw
+@navbar-default-link-active-color:        @uw-gray-dark; //uw
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
